// Copyright 2019 The Chromium Authors

// This proto description is adapted from the one used in clang-proto-fuzzer.

syntax = "proto2";
package fuzzing;

enum ObjectType {
    Adapter = 1;
    BindGroup = 2;
    BindGroupLayout = 3;
    Buffer = 4;
    CommandBuffer = 5;
    CommandEncoder = 6;
    ComputePassEncoder = 7;
    ComputePipeline = 8;
    Device = 9;
    ExternalTexture = 10;
    Instance = 11;
    PipelineLayout = 12;
    QuerySet = 13;
    Queue = 14;
    RenderBundle = 15;
    RenderBundleEncoder = 16;
    RenderPassEncoder = 17;
    RenderPipeline = 18;
    Sampler = 19;
    ShaderModule = 20;
    Surface = 21;
    SwapChain = 22;
    Texture = 23;
    TextureView = 24;
};

message DeviceCreateRenderPipeline {}
message DeviceCreateRenderPipelineAsync {}

message DeviceCreateShaderModule {
    required uint32 self = 1;
}

message DestroyObject {
    required ObjectType objectType = 1;
    required uint32 objectId = 2;
}

message DeviceCreateBindGroupEntry {}

message DeviceCreateBindGroupLayoutEntry {}